# hugme

./: .env.example  .env.template  .gitattributes  .gitignore  .smoke.txt  AGENTS.md  AGENTS.md.backup  CHANGELOG.md  D3-2_PROMPT_10_LAYERS.md  D3-3_MEMORY_WRITER.md  D3-4_EMBEDDING_WORKER.md  D4-1_HYBRID_RETRIEVAL.md  D4-3_LONELINESS_SCORING.md  D4-4_UTTERANCE_EMOTION.md  D5-4_WEBSOCKET_PROTOCOL.md  D6-3_SILENT_REACTIVATION_STRATEGY.md  D6-4_NOTIFICATION_QUEUE_DESIGN.md  D7-1_MONITORING_DESIGN.md  D7-2_ALERTING_DESIGN.md  README.md  RUNBOOK.md  deploy.sh  docker-compose-minimal.yml  docker-compose-simple.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  schema_spec.json
.dev/: task_completion_checklist.md
.github/: branch-protection.md
admin/: next.config.js  package-lock.json  package.json
app/: Dockerfile  main.py  requirements.txt
config/: alert_rules.json  h01_tech_stack_signoff.json  h03_approved_script_materials.json  h04_persona_policy.json  h05_vip_h5_approval.json  h06_operator_feedback_archive.json  h07_week9_cd_canary_approval.json  h08_week10_11_bas_approval.json  h09_operator_sop_training.json  h10_go_no_go_signoff.json  h11_telegram_real_account_sop.json  intent_keyword_rules.json  intent_regression_set.json  level_regression_set.json  level_thresholds.json  safety_filter_redlines.json  t1_countries.json  t2_countries.json
docs/: 20260514v001.html  A8_2_AUTH_JWT.md  ADMIN_BETA_PREFLIGHT.md  BETA_CHECKLIST.md  BETA_DAY1_METRICS.md  C06_INSPECTION_REPORT.md  C07_INSPECTION_REPORT.md  C08_INSPECTION_REPORT.md  C11_UX_ISSUES.md  (+87 more)
(+547 files in other folders)
